--- a/pg_app/Cargo.toml
+++ b/pg_app/Cargo.toml
@@ -4,7 +4,19 @@ version = "0.1.0"
 authors = ["Youknowwho55 <dylan9112@gmail.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[workspace]
+resolver = "2"
+members = [
+    "server", 
+    "shared",
+    "components",
+    "assets",
+    "pages",
+
+]
+
+
 
 [dependencies]
 dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
@@ -17,6 +29,23 @@ web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 # The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
 mobile = ["dioxus/mobile"]
+
+
+
+
+
+[workspace.dependencies]
+dioxus = { version = "0.6.0"}
+
+
+# workspace
+server = { path = "server" }
+shared = { path = "shared" }
+
+
+
+
+
 
 [profile]
 
