--- a/pg_app/server/Cargo.toml
+++ b/pg_app/server/Cargo.toml
@@ -1,3 +1,4 @@
+# pg_app/server/Cargo.toml
 [package]
 name = "server"
 version = "0.1.0"
@@ -5,7 +6,7 @@ edition = "2024"
 
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
-shared = { workspace = true }
+# shared = { workspace = true }
 
 dotenv = "0.15.0"
 tokio = { version = "1.44.2", features = [
