--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 serde = "1.0.217"
 sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
+dioxus = "0.6.3"
