--- a/pg_app/server/Cargo.toml
+++ b/pg_app/server/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
 shared = { workspace = true }
+rand = "0.9.0"
+argon2 = "0.5.3"
 
 dotenv = "0.15.0"
 tokio = { version = "1.44.2", features = [
