need to fix SQL

--- a/pg_app/components/Cargo.toml
+++ b/pg_app/components/Cargo.toml
@@ -14,7 +14,7 @@ shared = { path = "../shared" }
 log = "0.4.27"
 chrono = { version = "0.4.40", features = ["clock"] }
 dioxus = { version = "0.6.3", features = ["desktop"] }  # Correct format
-
+tracing = "0.1.41"
 tokio = { version = "1.0", features = ["time"] }  # Always included
 wasm-bindgen-futures = { version = "0.4", optional = true }
 web-sys = { version = "0.3", features = ["Window"], optional = true }
