--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -5,5 +5,15 @@ edition = "2024"
 
 [dependencies]
 serde = "1.0.217"
+serde_json = "1.0"
+
 sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
 dioxus = "0.6.3"
+validator = { version = "0.20", features = ["derive"] }
+regex = "1.9"
+lazy_static = "1.4"
+chrono = { version = "0.4", features = ["serde"] }
+strum = { version = "0.27.1", features = ["derive"] }
+sha2 = "0.10"
+bcrypt = "0.17"
+thiserror = "2.0.12"
