--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
 # Core serialization
-serde = { version = "1.0.217", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 # Database
-sqlx = { version = "0.8.3", features = [
+sqlx = { version = "0.8", features = [
     "runtime-tokio-native-tls",
     "postgres",
     "chrono",
@@ -17,8 +18,8 @@ sqlx = { version = "0.8.3", features = [
     "json"
 ]}
 
-# UI Framework
-dioxus = { version = "0.6.3", optional = true }
+# UI Framework (now marked as optional)
+dioxus = { version = "0.6" }
 
 # Validation
 validator = { version = "0.20", features = ["derive"] }
@@ -28,16 +29,15 @@ regex = "1.9"
 lazy_static = "1.4"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 
-# Enum utilities (ensure enum_iter feature is enabled)
-strum = { version = "0.27.1", features = ["derive"] }  # Note the hyphen
+# Enum utilities
+strum = { version = "0.27", features = ["derive"] }
 
 # Security
 sha2 = "0.10"
 bcrypt = "0.17"
 
 # Error handling
-thiserror = "2.0.12"
+thiserror = "2.0"
 
 [features]
-# Optional frontend support
-frontend = ["dioxus"]
+frontend = ["dep:dioxus"]  # Explicit feature dependency
