--- a/pg_app/components/Cargo.toml
+++ b/pg_app/components/Cargo.toml
@@ -10,6 +10,8 @@ path = "src/lib.rs"  # This tells Cargo where to find the library
 
 [dependencies]
 shared = { path = "../shared", features = ["frontend"] }
+server = { path = "../server" }
+
 
 log = "0.4.27"
 chrono = { version = "0.4.40", features = ["clock"] }
