--- a/pg_app/server/Cargo.toml
+++ b/pg_app/server/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2024"
 
 [dependencies]
 dioxus = { workspace = true, features = ["fullstack"] }
-shared = { workspace = true }
+shared = { path = "../shared", features = ["frontend"] }
+
 argon2 = "0.5.3"
 rand_core = "0.9.3"
 rand = "0.9.0"
