--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+pages = { path = "../pages" }  # 👈 Relative path to the views crate
 
 # Core serialization
 serde = { version = "1.0", features = ["derive"] }
