--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -4,41 +4,41 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-pages = { path = "../pages" }  # 👈 Relative path to the views crate
-
-# Core serialization
+# Always available
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-# Database
-sqlx = { version = "0.8", features = [
-    "runtime-tokio-native-tls",
-    "postgres",
-    "chrono",
-    "uuid",
-    "json"
-]}
-
-# UI Framework (now marked as optional)
-dioxus = { version = "0.6",  optional = true  }
-
-# Validation
-validator = { version = "0.20", features = ["derive"] }
-
-# Utilities
+thiserror = "2.0"
+strum = { version = "0.27", features = ["derive"] }
 regex = "1.9"
 lazy_static = "1.4"
-chrono = { version = "0.4", features = ["serde", "clock"] }
+tokio = { version = "1.0", optional = true }
+# Frontend-only
+dioxus = { version = "0.6", optional = true }
 
-# Enum utilities
-strum = { version = "0.27", features = ["derive"] }
+# Backend-only (optional)
+sqlx = { version = "0.8", optional = true }
+bcrypt = { version = "0.17", optional = true }
+validator = { version = "0.20", optional = true, features = ["derive"] }
 
-# Security
-sha2 = "0.10"
-bcrypt = "0.17"
-
-# Error handling
-thiserror = "2.0"
+# Conditional chrono features
+chrono = { version = "0.4", default-features = false, features = ["serde"] }
 
 [features]
-frontend = ["dep:dioxus"]  # Explicit feature dependency
+default = []
+frontend = ["dep:dioxus"]
+backend = [
+    "dep:sqlx",
+    "dep:bcrypt",
+    "dep:validator",
+    "chrono/clock"
+]
+db = ["dep:sqlx", "dep:tokio"]  # Add this line
+
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+# Additional native-only deps if needed
+
+
+
+
+
