--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2024"
 
 [dependencies]
 # Always available
-async-trait = "0.1.88"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
@@ -17,7 +16,7 @@ tokio = { version = "1.0", optional = true }
 dioxus = { version = "0.6", optional = true }
 
 # Backend-only (optional)
-sqlx = { version = "0.8", optional = true }
+sqlx = { version = "0.8", optional = true, features = ["postgres", "chrono", "runtime-tokio"] }
 bcrypt = { version = "0.17", optional = true }
 validator = { version = "0.20", optional = true, features = ["derive"] }
 
@@ -33,13 +32,11 @@ backend = [
     "dep:validator",
     "chrono/clock"
 ]
+
 db = ["dep:sqlx", "dep:tokio"]  # Add this line
 
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # Additional native-only deps if needed
-
-
-
 
 
