--- a/pg_app/shared/Cargo.toml
+++ b/pg_app/shared/Cargo.toml
@@ -14,30 +14,31 @@ regex = "1.9"
 lazy_static = "1.4"
 tokio = { version = "1.0", optional = true }
 # Frontend-only
-dioxus = { version = "0.6", optional = true }
+dioxus = { version = "0.6.3"}
+dioxus-fullstack = "0.6.3"
 
-# Backend-only (optional)
-sqlx = { version = "0.8", optional = true, features = ["postgres", "chrono", "runtime-tokio"] }
+
+# Backend-only
+sqlx = { version = "0.8", features = ["postgres", "chrono", "runtime-tokio"] }
 bcrypt = { version = "0.17", optional = true }
-validator = { version = "0.20", optional = true, features = ["derive"] }
+validator = { version = "0.20", features = ["derive"] }
 
 # Conditional chrono features
 chrono = { version = "0.4", default-features = false, features = ["serde"] }
 
 [features]
 default = []
-frontend = ["dep:dioxus"]
+frontend = []
 backend = [
-    "dep:sqlx",
     "dep:bcrypt",
-    "dep:validator",
     "chrono/clock"
 ]
+#    "dep:validator",     "dep:sqlx",
 
-db = ["dep:sqlx", "dep:tokio"]  # Add this line
 
 
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-# Additional native-only deps if needed
+db = [ "dep:tokio"]  
+
+
 
 
