all of a sudden we back

--- a/pg_app/pages/Cargo.toml
+++ b/pg_app/pages/Cargo.toml
@@ -18,7 +18,7 @@ components = { path = "../components" }
 # Platform-specific (mark desktop as optional)
 dioxus-desktop = { workspace = true, optional = true }  # Added optional=true
 
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
 # WASM-specific dependencies here
 
 [features]
