--- a/pg_app/components/Cargo.toml
+++ b/pg_app/components/Cargo.toml
@@ -9,6 +9,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 shared = { path = "../shared" }
+server = { path = "../server" }
+
 log = "0.4"
 dioxus = { version = "0.6.3" }  # Keep as required dep
 dioxus-desktop = { version = "0.6.3", optional = true }  # Now optional
@@ -17,9 +19,9 @@ tokio = "1.44.2"
 
 
 # Platform-specific
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = ["Window"] }
+#[target.'cfg(target_arch = "wasm32")'.dependencies]
+#wasm-bindgen-futures = "0.4"
+#web-sys = { version = "0.3", features = ["Window"] }
 
 [features]
 default = []
